Fixed issue with opening scrollbar where scrollbar moved content

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f4f4f4;
+  overflow-y: overlay;
 }
 
 code {
